// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NoteEntry component should render a completed work order note 1`] = `
<DocumentFragment>
  <div
    class="note-info lbh-body-s"
  >
    23 Jan 2021, 16:28 by Test user (sample@sample.com)
  </div>
  <span>
    Closed - Completed: 23 January 2021 at 16:28 - comments left by user - Assigned operatives Steve: 15% - Bonus calculation
    <br />
  </span>
</DocumentFragment>
`;

exports[`NoteEntry component should render a normal note 1`] = `
<DocumentFragment>
  <div
    class="note-info lbh-body-s"
  >
    23 Jan 2021, 16:28 by Test user (sample@sample.com)
  </div>
  <span>
    some pre-generated note
    <br />
  </span>
</DocumentFragment>
`;

exports[`NoteEntry component should render note with image (repairs online) 1`] = `
<DocumentFragment>
  <div
    class="note-info lbh-body-s"
  >
    23 Jan 2021, 16:28 by Test user (sample@sample.com)
  </div>
  <span>
    Housing Repairs Online request: 
    <a
      href="http://example-url/"
    >
      Image from user
    </a>
  </span>
</DocumentFragment>
`;
